fix menu visibility and overscrolling

--- a/components/app/style.css
+++ b/components/app/style.css
@@ -1,7 +1,4 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
   width: 100vw;
 }
